# Music-manager

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Readme.txt  playlists.txt
application/: Program.cpp
docs/html/: List_8h_source.html  Music_8h_source.html  Node_8h_source.html  Playlist_8h_source.html  SystemMusics_8h_source.html  SystemPlaylists_8h_source.html  annotated.html  classList-members.html  classList.html  classMusic-members.html  classMusic.html  classMusic__coll__graph.map  classMusic__coll__graph.md5  classNode-members.html  classNode.html  classPlaylist-members.html  classPlaylist.html  classPlaylist__coll__graph.map  classPlaylist__coll__graph.md5  classSystemMusics-members.html  classSystemMusics.html  classSystemMusics__coll__graph.map  classSystemMusics__coll__graph.md5  classSystemPlaylists-members.html  classSystemPlaylists.html  classSystemPlaylists__coll__graph.map  classSystemPlaylists__coll__graph.md5  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_844f6ab5c2ae79211596f3dcdd81adb7.html  dir_90b540a60f6d4c7f903393b3db9eca71.html  dir_bc3bdde58610ae500ff9644b34b3588a.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d691984d1d74be3b164cee16192654be.html  dir_e6464ce20b9a6f3984c488adcb19fdfe.html  files.html  functions.html  functions_func.html  functions_rela.html  (+6 more)
docs/latex/: annotated.tex  classList.tex  classMusic.tex  classNode.tex  (+9 more)
entities/: Artist.cpp  Music.cpp  Playlist.cpp
include/: Artist.h  List.h  Music.h  Node.h  Playlist.h  SystemMusics.h  SystemPlaylists.h
(+73 files in other folders)
